mutants.out/log/crates__runtime__src__lib.rs_line_251_col_9.log

*** crates/runtime/src/lib.rs:251:9: replace RuntimeRunner::compile_agent -> Result<RuntimePlan, RuntimeError> with Ok(Default::default())

*** mutation diff:
--- crates/runtime/src/lib.rs
+++ replace RuntimeRunner::compile_agent -> Result<RuntimePlan, RuntimeError> with Ok(Default::default())
@@ -243,34 +243,17 @@
         })
     }
 
     fn compile_agent(
         &self,
         request: &RuntimeRequest,
         command: &AgentCommand,
     ) -> Result<RuntimePlan, RuntimeError> {
-        let mut spec = CommandSpec::new(command.program())
-            .args(command.args().iter().cloned())
-            .stdin(&request.input_json);
-
-        if let Some(current_dir) = command.current_dir() {
-            spec = spec.current_dir(current_dir);
-        }
-
-        let policy = request.sandbox.to_policy();
-        let plan = self.sandbox_runner.compile(&spec, &policy)?;
-
-        Ok(RuntimePlan {
-            target: RuntimeTargetKind::Agent,
-            sandbox: plan.backend,
-            command: spec,
-            policy,
-            _compiled_script: None,
-        })
+        Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
     }
 
     fn run_plan(&self, plan: RuntimePlan) -> Result<RuntimeOutput, RuntimeError> {
         let result = self.sandbox_runner.run(&plan.command, &plan.policy)?;
 
         Ok(runtime_output(plan.target, plan.sandbox, result))
     }
 }


*** /Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/cargo test --no-run --verbose --package=runtime@0.1.0
       Fresh agent v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/crates/agent)
       Fresh sandbox v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/crates/sandbox)
       Fresh script v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/crates/script)
       Dirty runtime v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/crates/runtime): couldn't read metadata for file `target/debug/deps/libruntime-f6f0fa129a177682.rlib`
   Compiling runtime v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/crates/runtime)
     Running `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name runtime --edition=2024 crates/runtime/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=a2b3775ea973f797 -C extra-filename=-f6f0fa129a177682 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps --extern agent=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libagent-df1187056c019dff.rmeta --extern sandbox=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libsandbox-3854b11f8daf2006.rmeta --extern script=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libscript-d02cc1a249e66324.rmeta`
     Running `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name runtime --edition=2024 crates/runtime/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=edaf1587f9d3a3d6 -C extra-filename=-24731b632105dc02 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps --extern agent=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libagent-df1187056c019dff.rlib --extern sandbox=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libsandbox-3854b11f8daf2006.rlib --extern script=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libscript-d02cc1a249e66324.rlib`
error[E0277]: the trait bound `RuntimePlan: Default` is not satisfied
   --> crates/runtime/src/lib.rs:251:12
    |
251 |         Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
    |            ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `RuntimePlan`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `runtime` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name runtime --edition=2024 crates/runtime/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=edaf1587f9d3a3d6 -C extra-filename=-24731b632105dc02 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps --extern agent=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libagent-df1187056c019dff.rlib --extern sandbox=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libsandbox-3854b11f8daf2006.rlib --extern script=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libscript-d02cc1a249e66324.rlib` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `runtime` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name runtime --edition=2024 crates/runtime/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=a2b3775ea973f797 -C extra-filename=-f6f0fa129a177682 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps --extern agent=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libagent-df1187056c019dff.rmeta --extern sandbox=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libsandbox-3854b11f8daf2006.rmeta --extern script=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libscript-d02cc1a249e66324.rmeta` (exit status: 1)

*** result: Failure(101)
